--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,9 +5,9 @@ name: Master
 
 on:
     push:
-        branches: ["Master"]
+        branches: ["master"]
     pull_request:
-        branches: ["Master"]
+        branches: ["master"]
 
 jobs:
     build:
